<resources>
    <string name="app_name">HahaClass</string>
    <string name="title_app_name">행복을 만드는 아리랑</string>
    <string name="subtitle_app_name">하박수 웃음교실</string>

    <string name="forgot_pwd">비밀번호를 잊으셨나요?</string>
    <string name="goback">기존 계정으로 로그인</string>
    <string name="cont_use_custom">회원 전용입니다 회원가입하시겠습니까?</string>
    <string name="list_add">추가</string>
    <string name="save_edit">저장</string>
    <string name="save_instructor">수정을 저장하시겠습니까?</string>
    <string name="prompt_changes_info">변경사항</string>
    <string name="title_activity_login">Sign in</string>
    <string name="custom_sign_in">Custom</string>
    <string name="action_sign_up">Create Account</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_repassword">비밀번호 확인</string>
    <string name="prompt_new_password">새로운 비밀번호</string>

    <string name="prompt_name">name</string>
    <string name="prompt_phone">phone</string>
    <string name="prompt_board_msg">내용</string>
    <string name="prompt_board_title">제목</string>


    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_no_msg">메세지가 없습니다</string>
    <string name="action_no_title">제목을 입력해주세요</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">이름이 정확하지 않습니다</string>
    <string name="error_field_title_length">제목의 길이가 초과하였습니다</string>
    <string name="error_field_message_length">내용의 길이가 초과하였습니다</string>
    <string name="error_invalid_phone">번호가 정확하지 않습니다</string>
    <string name="error_invalid_password">비밀번호가 정확하지 않습니다</string>
    <string name="error_incorrect_password">비밀번호가 정확하지 않습니다</string>
    <string name="error_incorrect_rpassword">재입력 번호가 다릅니다</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_account">sign up</string>
    <string name="draw_open">Opened</string>
    <string name="draw_close">closed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_apply">ApplyActivity</string>


    <string name="title_setting_apply_class">신청 강의 리스트</string>
    <string name="title_setting_my_class">내 강의 리스트</string>


</resources>
