<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="8dp"
    android:theme="@style/FragTeme"
    >

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="비밀번호 변경"
        android:textSize="24sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>
    <ScrollView
        android:layout_below="@+id/setting_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"

            android:padding="8dp">
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="현재 비밀번호"-->
                <!--android:textSize="22sp"-->
                <!--android:padding="4dp"-->
                <!--android:textStyle="bold"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--/>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_layout"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/pwd_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="새로운 비밀번호"-->
                <!--android:textSize="22sp"-->
                <!--android:padding="4dp"-->
                <!--android:textStyle="bold"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--/>-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/pwd_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="비밀번호 확인"-->
                <!--android:textSize="22sp"-->
                <!--android:padding="4dp"-->
                <!--android:textStyle="bold"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--/>-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/pwd_r_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_repassword"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/submit_account"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="확인"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>