<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="삭제"
        android:textColor="@color/colorWhite"
        android:background="@drawable/btn_str"
        android:visibility="gone"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:background="@color/colorDarkGray">
        <Button
            android:id="@+id/btn_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="리스트"
            android:layout_weight="5"
            android:layout_marginRight="1dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_str"
            />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="저장"
            android:layout_marginLeft="1dp"
            android:layout_weight="5"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_str"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDarkGray"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorDarkGray"
        android:padding="4dp"
        >
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:text="김지안(o0x0***)님 안녕하세요 !"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/edit_layout_stroke_normal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
       >
        <android.support.design.widget.TextInputLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:padding="8dp"

            >

            <EditText

                android:id="@+id/repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDarkGray"
        android:layout_marginTop="2dp"
        />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                >
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_gravity="center_vertical"
                    ></Spinner>
                <TextView
                    android:id="@+id/tv_instructor"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text=""
                    android:maxLines="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/btn_upload_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="right"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:textColor="@color/colorWhite"
                android:clickable="true"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/btn_upload_img"
                />
            <ImageView
                android:id="@+id/btn_upload_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_menu_camera"
                android:textColor="@color/colorWhite"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_board_title"
                android:imeActionLabel="@string/action_no_title"
                android:imeOptions="actionUnspecified"
                android:inputType="textMultiLine"
                android:textSize="20sp"
                android:maxLines="2"
                android:padding="10dp"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDarkGray"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:minHeight="400dp">

            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:visibility="gone"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_board_msg"
                    android:imeActionLabel="@string/action_no_msg"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:imeActionId="6"
                    android:scrollbars="vertical"
                    android:padding="10dp"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDarkGray"
            android:layout_marginBottom="4dp"
            />
    </LinearLayout>




    </LinearLayout>
    </ScrollView>

</LinearLayout>